# wordle

./: Cargo.toml  HONOR-CODE.md
src/: main.rs
