[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
serde_json = "1.0"
console = "0.15"
text_io = "0.1.12"
colored = "2.0.0"
clap = "3.2.17"
rand = "0.8.5"
json = "0.12.4"
serde = "1.0.144"
serde_derive = "1.0.144"
read_line = "0.0.1"

[dev-dependencies]
lazy_static = "1.0"
assert-json-diff = "2.0"
ntest = "0.8"
pretty_assertions = "1.2.1"
